@startuml
'https://plantuml.com/class-diagram


class Employee{
  userID
  name
  password
}

class AdministratorDGS
class Receptionist
class Nurse
class Administrator
class Coordinator

Employee "1" -- "0..1" Receptionist: > plays as
Employee "1" -- "0..1" Nurse: > plays as
Employee "1" -- "0..1" Administrator: > plays as
Employee "1" -- "0..1" Coordinator: > plays as
Employee "1" -- "0..1" Receptionist: > plays as
AdministratorDGS "1" -- "0..1" Employee: > registers

@enduml